<resources>
    <string name="app_name">Sunrise</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="sample_title">샘플 타이틀</string>
    <string name="sample_content">사람들의 별 파란 책상을 아침이 무성할 같이 못 별 계십니다. 흙으로 내일 별을 불러 한 헤는 거외다. 이름자를 쉬이 풀이 써 새겨지는 그러나 않은 어머니, 까닭입니다. 가을로 다 잠, 버리었습니다. 그리고 것은 다 마디씩 딴은 있습니다. 했던 별을 이름과, 나는 내 이 시인의 위에도 계십니다. 것은 이름을 오는 사람들의 버리었습니다. 애기 시인의 새워 위에도 추억과 이런 듯합니다. 그러나 내일 묻힌 어머니 했던 이제 라이너 북간도에 까닭입니다.</string>
    <string name="sample_challenge">도전과제</string>
    <string name="sample_challenge_name">힘들 때 힘들다고 말하기</string>
    <string name="sample_challenge_name_with_title">도전과제 | 힘들 떄 힘들다고 말하기</string>
    <string name="sample_home_title">오늘 하루,\n새로운 나를 발견하다.</string>
    <string name="frag_home_today_challenge">오늘의 도전과제</string>
    <string name="frag_home_recent_entries">최근 기록</string>

    <!-- Content Descriptions -->
    <string name="CD_challenge_result">도전과제 결과 아이콘</string>
    <string name="CD_edit_challenge">도전과제 수정 아이콘</string>
    <string name="CD_close">닫기 버튼</string>
    <string name="frag_challenge_select_title">오늘 하루도\n새로운 나를 찾아볼까요?</string>
    <string name="today_challenge">오늘의 도전과제</string>
    <string name="frag_challenge_select_note_1">*도전과제는 언제든 다시 선택할 수 있어요</string>
    <string name="frag_challenge_select_note_2">*도전과제를 선택하지 않아도 일기는 작성할 수 있어요.</string>
    <string name="frag_challenge_select_write_own_challenge"><u>직접 쓰기</u></string>
    <string name="CD_refresh_today_challenge">오늘의 도전과제 새로고침 버튼</string>
    <string name="frag_challenge_select_accept_challenge">도전하기</string>
    <string name="frag_challenge_check_title">오늘의 도전 과제,\n성공했나요?</string>
    <string name="frag_challenge_check_write_entry">오늘 하루 기록하기</string>
    <string name="frag_challenge_check_try_again_tomorrow">내일 다시 도전해볼게요.</string>
    <string name="CD_challenge_done">도전 과제 성공 버튼</string>
    <string name="CD_challenge_fail">도전 과제 실패 버튼</string>
    <string name="sample_entry_write_challenge_name_with_title">도전과제 / 힘들 때 힘들다고 말하기</string>
    <string name="frag_entry_write_content_hint">오늘 하루, 무슨 일이 있었나요?</string>
    <string name="frag_entry_write_title_hint">제목</string>
    <string name="sample_temp">24℃</string>
    <string name="sample_location">서울특별시 중구</string>
    <string name="CD_fab">플로팅 액션 버튼</string>
    <string name="frag_entry_write_menu_save">저장</string>
    <string name="frag_entry_write_menu_delete">삭제</string>
    <string name="frag_entry_write_menu_modify">수정</string>
    <string name="entry_long_click_menu_item_modify">기록 수정</string>
    <string name="entry_long_click_menu_item_delete">기록 삭제</string>
    <string name="entry_delete_dialog_button_delete">삭제</string>
    <string name="entry_delete_dialog_button_cancel">취소</string>
    <string name="entry_delete_dialog_title">기록을 삭제할까요?</string>
    <string name="entry_delete_dialog_message">삭제된 기록은 복구할 수 없어요.</string>
    <string name="entry_delete_dialog_confirm_toast">기록이 삭제되었어요.</string>
    <string name="frag_entry_write_menu_edit">편집</string>
    <string name="pref_key_challenge_id">KEY_CHALLENGE_ID</string>
    <string name="pref_key_challenge_date">KEY_CHALLENGE_LOCAL_DATE</string>
    <string name="CD_challenge_category_button">도전 과제 카테고리 확장축소 버튼</string>
    <string name="CD_challenge_postpone">도전과제 연기 버튼</string>
    <string name="frag_challenge_check_done_button_label">@string/challenge_result_success</string>
    <string name="frag_challenge_check_fail_button_label">@string/challenge_result_fail</string>
    <string name="frag_challenge_check_postpone_button_label">@string/challenge_result_postpone</string>
    <string name="frag_entry_write_challenge_name">도전과제 / %s</string>
    <string name="frag_entry_write_text_count">%s자</string>

    <string name="arg_show_fab">showFab</string>

    <string name="change_challenge_result_dialog_title">도전 과제 결과 변경</string>

    <string name="challenge_result_success">성공</string>
    <string name="challenge_result_fail">실패</string>
    <string name="challenge_result_postpone">연기</string>
    <string name="toast_message_title_enabled">제목 활성화</string>
    <string name="toast_message_title_disabled">제목 비활성화</string>
    <string name="no_location_information">위치 정보 없음</string>
    <string name="delete">삭제</string>
    <string name="cancel">취소</string>
    <string name="dialog_message_exit_warning">저장하지 않은 값은 모두 삭제됩니다.</string>
    <string name="frag_photo_photo_count">%d / %d</string>
    <string name="pref_notification_enabled_key">pref_key_use_notification</string>
    <string name="frag_home_menu_settings">설정</string>
    <string name="label_settings_fragment">설정</string>
    <string name="pref_key_add_location_by_default">pref_key_add_location_by_default</string>
    <string name="pref_key_enable_title_by_default">pref_key_enable_title_by_default</string>

    <!-- Pref : Theme    -->
    <string name="pref_theme_key">pref_theme_key</string>
    <string name="pref_theme_title">테마</string>
    <string name="pref_theme_day_theme_entry">밝은 테마</string>
    <string name="pref_theme_night_theme_entry">어두운 테마</string>
    <string name="pref_theme_follow_system_entry">시스템 기본값</string>
    <string name="pref_theme_day_theme_value">day_theme</string>
    <string name="pref_theme_night_theme_value">night_theme</string>
    <string name="pref_theme_follow_system_value">follow_system</string>

    <!-- Pref : Notification - Day of the week    -->
    <string name="pref_notification_dow_key">pref_notification_dow_key</string>
    <string name="pref_notification_dow_mon_entry">월요일</string>
    <string name="pref_notification_dow_tue_entry">화요일</string>
    <string name="pref_notification_dow_wed_entry">수요일</string>
    <string name="pref_notification_dow_thu_entry">목요일</string>
    <string name="pref_notification_dow_fri_entry">금요일</string>
    <string name="pref_notification_dow_sat_entry">토요일</string>
    <string name="pref_notification_dow_sun_entry">일요일</string>
    <string name="pref_notification_dow_mon_value">mon</string>
    <string name="pref_notification_dow_tue_value">tue</string>
    <string name="pref_notification_dow_wed_value">wed</string>
    <string name="pref_notification_dow_thu_value">thu</string>
    <string name="pref_notification_dow_fri_value">fri</string>
    <string name="pref_notification_dow_sat_value">sat</string>
    <string name="pref_notification_dow_sun_value">sun</string>
    <string name="pref_notification_dow_summary_every_day">매일</string>
    <string name="pref_notification_dow_summary_weekday">평일</string>
    <string name="pref_notification_dow_summary_weekend">주말</string>
    <string name="notification_channel_write_entry_id">notification_channel_write_entry_id</string>
    <string name="notification_channel_write_entry_channel_name">기록 알림</string>

    <!-- Pref : Notification - Time    -->
    <string name="pref_notification_time_key">pref_notification_time_key</string>
    <string name="pref_oss_licenses_key">pref_oss_licenses_key</string>
    <string name="act_oss_licenses_menu_title">오픈소스 라이선스</string>
    <string name="pref_version_info_key">pref_version_info_key</string>
    <string name="frag_settings_version_info_copyright">Copyright 2022%s. Nodes.inc. All rights reserved.</string>
    <string name="frag_settings_version_info_version">현재버전: %s</string>
    <string name="frag_settings_version_info_title">버전 정보</string>
    <string name="pref_key_premium">pref_key_premium</string>
    <string name="frag_purchase_description">SUNRISE는 기본적으로 무료로 사용이 가능합니다.\n\n 더 나은 일기장 작성 경험을 원하신다면\n아래 프리미엄 기능을 추가해보세요.\n\n프리미엄 기능은 계속해서 추가될 예정입니다.</string>
    <string name="frag_purchase_title">프리미엄 기능 구매</string>
    <string name="pref_key_font">pref_key_font</string>
    <string name="pref_key_background_color">pref_key_background_color</string>
    <string name="frag_settings_font_title">서체</string>
    <string name="frag_settings_font_nanum_myeongjo">나눔명조</string>
    <string name="frag_settings_font_nanum_gothic">나눔고딕</string>
    <string name="frag_settings_font_gamja_flower">감자꽃</string>
    <string name="frag_settings_font_single_day">싱글 데이</string>
</resources>