<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="프리미엄">

        <Preference
            app:key="@string/pref_key_premium"
            app:title="프리미엄 기능 구매" />

    </PreferenceCategory>

    <PreferenceCategory app:title="보기">

        <com.nodes.sunrise.components.preferences.ThemePreference
            app:defaultValue="@string/pref_theme_follow_system_value"
            app:entries="@array/pref_theme_entries"
            app:entryValues="@array/pref_theme_values"
            app:key="@string/pref_theme_key"
            app:title="@string/pref_theme_title"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="@string/pref_key_font"
            app:title="서체" />

        <Preference
            app:key="@string/pref_key_background_color"
            app:title="배경색" />

    </PreferenceCategory>

    <PreferenceCategory app:title="미리 알림">

        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/pref_notification_enabled_key"
            app:title="미리 알림" />

        <MultiSelectListPreference
            app:defaultValue="@array/pref_day_of_the_week_values"
            app:dependency="@string/pref_notification_enabled_key"
            app:entries="@array/pref_day_of_the_week_entries"
            app:entryValues="@array/pref_day_of_the_week_values"
            app:key="@string/pref_notification_dow_key"
            app:title="날짜" />

        <com.nodes.sunrise.components.preferences.TimePickerPreference
            app:defaultValue="79200"
            app:dependency="@string/pref_notification_enabled_key"
            app:key="@string/pref_notification_time_key"
            app:title="시간" />

    </PreferenceCategory>

    <PreferenceCategory app:title="데이터">

        <Preference
            app:summary="추후 업데이트 시 추가될 예정입니다."
            app:title="복원 / 백업" />

    </PreferenceCategory>

    <PreferenceCategory app:title="일기 작성">

        <SwitchPreference
            app:defaultValue="true"
            app:key="@string/pref_key_enable_title_by_default"
            app:summary="새로운 일기 항목을 추가할 때 기본적으로 제목을 활성화합니다."
            app:title="제목 자동 활성화" />

        <SwitchPreference
            app:defaultValue="true"
            app:key="@string/pref_key_add_location_by_default"
            app:summary="새로운 일기 항목을 추가할 때 자동으로 현재 위치를 추가합니다."
            app:title="위치 자동 추가" />

    </PreferenceCategory>

    <PreferenceCategory app:title="정보">

        <Preference
            app:key="@string/pref_version_info_key"
            app:title="버전 정보" />

        <Preference
            app:key="@string/pref_oss_licenses_key"
            app:title="오픈소스 라이선스 정보" />

    </PreferenceCategory>
</PreferenceScreen>