<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.challenge.check.ChallengeCheckFragment">

    <data>

        <variable
            name="viewModel"
            type="com.nodes.sunrise.ui.challenge.check.ChallengeCheckViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurfaceVariant"
        android:paddingHorizontal="@dimen/screen_horizontal_margin">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/CD_close"
            android:padding="16dp"
            android:src="@drawable/ic_round_close_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOutline" />

        <TextView
            android:id="@+id/frag_challenge_check_TV_title"
            android:textAppearance="@style/TextAppearance.Sunrise.HeadlineSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:gravity="center_horizontal"
            android:text="@string/frag_challenge_check_title"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginVertical="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@id/frag_challenge_check_TV_today_challenge_subtitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frag_challenge_check_TV_title" />

        <TextView
            android:id="@+id/frag_challenge_check_TV_today_challenge_subtitle"
            android:textAppearance="@style/TextAppearance.Sunrise.LabelMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/today_challenge"
            app:layout_constraintBottom_toTopOf="@id/frag_challenge_check_TV_today_challenge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <TextView
            android:id="@+id/frag_challenge_check_TV_today_challenge"
            android:textAppearance="@style/TextAppearance.Sunrise.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="2"
            android:text="@{viewModel.currentChallenge.name}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sample_challenge_name" />

        <ImageButton
            android:id="@+id/frag_challenge_check_IV_success_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="48dp"
            android:background="@drawable/bg_round_button"
            android:contentDescription="@string/CD_challenge_done"
            android:padding="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_round_done_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/frag_challenge_check_IV_fail_button"
            app:layout_constraintTop_toBottomOf="@id/frag_challenge_check_TV_today_challenge"
            app:tint="?attr/colorSurfaceVariant" />

        <TextView
            android:id="@+id/frag_challenge_check_TV_success_button_label"
            android:textAppearance="@style/TextAppearance.Sunrise.LabelMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/frag_challenge_check_done_button_label"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@id/frag_challenge_check_IV_success_button"
            app:layout_constraintRight_toRightOf="@id/frag_challenge_check_IV_success_button"
            app:layout_constraintTop_toBottomOf="@id/frag_challenge_check_IV_success_button"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/frag_challenge_check_IV_fail_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_round_button"
            android:contentDescription="@string/CD_challenge_fail"
            android:padding="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_round_close_24"
            app:layout_constraintLeft_toRightOf="@id/frag_challenge_check_IV_success_button"
            app:layout_constraintRight_toLeftOf="@id/frag_challenge_check_IV_postpone_button"
            app:layout_constraintTop_toTopOf="@id/frag_challenge_check_IV_success_button"
            app:tint="?attr/colorSurfaceVariant" />

        <TextView
            android:id="@+id/frag_challenge_check_TV_fail_button_label"
            android:textAppearance="@style/TextAppearance.Sunrise.LabelMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/frag_challenge_check_fail_button_label"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@id/frag_challenge_check_IV_fail_button"
            app:layout_constraintRight_toRightOf="@id/frag_challenge_check_IV_fail_button"
            app:layout_constraintTop_toBottomOf="@id/frag_challenge_check_IV_fail_button"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/frag_challenge_check_IV_postpone_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_round_button"
            android:contentDescription="@string/CD_challenge_postpone"
            android:padding="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_round_remove_24"
            app:layout_constraintLeft_toRightOf="@id/frag_challenge_check_IV_fail_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/frag_challenge_check_IV_success_button"
            app:tint="?attr/colorSurfaceVariant" />

        <TextView
            android:id="@+id/frag_challenge_check_TV_postpone_button_label"
            android:textAppearance="@style/TextAppearance.Sunrise.LabelMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/frag_challenge_check_postpone_button_label"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@id/frag_challenge_check_IV_postpone_button"
            app:layout_constraintRight_toRightOf="@id/frag_challenge_check_IV_postpone_button"
            app:layout_constraintTop_toBottomOf="@id/frag_challenge_check_IV_postpone_button"
            tools:visibility="visible" />

        <CheckBox
            android:id="@+id/frag_challenge_check_CB_try_again_tomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/frag_challenge_check_try_again_tomorrow"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frag_challenge_check_IV_success_button" />

        <Button
            android:id="@+id/frag_challenge_check_BTN_write_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/frag_challenge_check_write_entry"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>