<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.nodes.sunrise.ui.challenge.select.ChallengeSelectViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurfaceVariant"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/frag_challenge_select_TV_title"
            android:textAppearance="@style/TextAppearance.Sunrise.HeadlineSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/frag_challenge_select_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/frag_challenge_select_LL_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="@id/frag_challenge_select_TV_title"
            app:layout_constraintTop_toBottomOf="@id/frag_challenge_select_TV_title">

            <TextView
                android:id="@+id/frag_challenge_select_TV_note_1"
                android:textAppearance="@style/TextAppearance.Sunrise.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frag_challenge_select_note_1" />

            <TextView
                android:id="@+id/frag_challenge_select_TV_note_2"
                android:textAppearance="@style/TextAppearance.Sunrise.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="@string/frag_challenge_select_note_2" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/frag_challenge_select_RV_challenge_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:clipToPadding="false"
            android:paddingBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frag_challenge_select_LL_note"
            tools:listitem="@layout/list_item_challenge" />

        <Button
            android:id="@+id/frag_challenge_select_BTN_accept_challenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/screen_vertical_margin"
            android:enabled="false"
            android:text="@string/frag_challenge_select_accept_challenge"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
